Timer based wheel scroll latching breaks when event modifiers change.

This cl changes mouse_wheel_phase_handler to  start a new scroll
sequence when the new wheel event has different modifiers. This change
lets web pages to reliably prevent ctrl+wheel zooming since the wheel
event with different modifiers will be the first event in the new
sequence and will be handled blocking.

Bug: 823247
Test: *.TimerBasedLatchingBreaksWithModifiersChange
Change-Id: Ie0e5c120f1ccfa57d14fdeba9f388cdbbf679099
Reviewed-on: https://chromium-review.googlesource.com/975985
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546267}
Former-commit-id: b36f1701c605a1f60d1da657649a8f36f313903f